hphp/test/zend7/Zend/tests/bug34064.php.expectf
array(1) {
  [0]=>
  string(2) "ok"
}

Fatal error: %s
Stack trace:
#0 %s(%d): XmlTest->run()
#1 {main}
  thrown in %sbug34064.php on line 18